--- a/index.html
+++ b/index.html
@@ -93,7 +93,9 @@
 								<h2 class="major">DIGITAL</h2>
 
 								<li><a href="#NATURE">NATURE</a></li>
-								<li><a href="#HUMANITIES">HUMANITIES & CULTURE</a></li>
+								<li><a href="#CULTURE">CULTURE</a></li>
+								<li><a href="#VIEW">VIEW</a></li>
+								<li><a href="#STREET">STREET</a></li>
 								
 								<br><br>
 							</article>
@@ -101,15 +103,34 @@
 							<!-- NATURE -->
 							<article id="NATURE">
 								<h2 class="major">DIGITAL / NATURE</h2>
+								<span class="image main"><img src="images/3.jpg" alt="" /></span>
+								<h4>宜蘭</h4>
+								<p>同為日落，天空時不時也會染上粉嫩的色彩。</p>
+
+							</article>
+
+							<!-- CULTURE -->
+							<article id="CULTURE">
+								<h2 class="major">DIGITAL / CULTURE</h2>
+								<span class="image main"><img src="images/4.jpg" alt="" /></span>
+								<h4>宜蘭</h4>
+								<p>同為日落，天空時不時也會染上粉嫩的色彩。</p>
+
+
+							</article>
+
+							<!-- VIEW -->
+							<article id="VIEW">
+								<h2 class="major">DIGITAL / VIEW</h2>
 								<span class="image main"><img src="images/5.jpg" alt="" /></span>
 								<h4>宜蘭</h4>
 								<p>同為日落，天空時不時也會染上粉嫩的色彩。</p>
 
 							</article>
 
-							<!-- HUMANITIES -->
-							<article id="HUMANITIES">
-								<h2 class="major">DIGITAL / HUMANITIES & CULTURE</h2>
+							<!-- STREET -->
+							<article id="STREET">
+								<h2 class="major">DIGITAL / STREET</h2>
 								<span class="image main"><img src="images/7.jpg" alt="" /></span>
 								<h4>宜蘭</h4>
 								<p>同為日落，天空時不時也會染上粉嫩的色彩。</p>
